--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@playwright/test": "^1.47.0",
     "@types/node": "^22.5.4"
   },
-  "scripts": {},
-  "author": "",
+  "scripts": {
+    "test": "npx playwright test"
+  },
+  "author": "@Amarnath Dwarakanath",
   "license": "ISC"
 }
